# DSAI-Backend

./: README.txt
Client/: Client.js
ConnectionBridge/: package-lock.json  package.json
ConnectionBridge/src/: app.js
DSAIListener/: CMakeLists.txt  config.csv
DSAIListener/src/: DSAIFileOperator.cpp  DSAIFileOperator.h  DSAIListener.cpp  DSAIListener.h  DSAIMgr.cpp  DSAIMgr.h  DSAISerialListener.cpp  DSAISerialListener.h  InfoProcessing.cpp  main.cpp
DSAIListener/src/utils/: BasicConfig.cpp  BasicConfig.h  BasicJsonParser.cpp  BasicJsonParser.h  BasicTimer.cpp  BasicTimer.h  CSVIterator.cpp  CSVIterator.h  CSVRow.cpp  CSVRow.h
DSAIListenerWin32/: CMakeLists.txt
DSAIListenerWin32/src/: DSAIListenerWin32.cpp  DSAIListenerWin32.h  main.cpp
DSAIListenerWin32/src/utils/: BasicJsonParser.h
DSAISerialListener/: CMakeLists.txt
DSAISerialListener/src/: DSAISerialListener.cpp  DSAISerialListener.h  main.cpp
InfoProcessing/: CMakeLists.txt
InfoProcessing/src/: InfoProcessing.hpp  main.cpp
SimpleTCPServer/: SimpleTCPServer.cpp
